# email-llm

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
src/: __init__.py  attachment_extractor.py  cli.py  config.py  email_parser.py  embeddings.py  indexer.py  llm_client.py  models.py  rag_engine.py  vision_model.py  web.py  yolo_analyzer.py
templates/: index.html
tests/: __init__.py
